--- a/packages/recomponents/src/components/r-radio/r-toggle.scss
+++ b/packages/recomponents/src/components/r-radio/r-toggle.scss
@@ -10,7 +10,7 @@
     cursor: pointer;
 }
 
-.r-field-label-toggle.is-disabled {
+.r-field-label-toggle.r-is-disabled {
     color: var(--text-muted);
 }
 
