--- a/packages/recomponents/src/components/r-avatar/r-avatar.scss
+++ b/packages/recomponents/src/components/r-avatar/r-avatar.scss
@@ -19,7 +19,7 @@
     flex: 0 0 auto;
 }
 
-.r-avatar-image {
+.r-avatar-image-wrapper {
     width: 100%;
     height: 100%;
     top: 0;
@@ -31,7 +31,7 @@
         margin: 0;
     }
 
-    img {
+    .r-avatar-image {
         width: 100%;
     }
 }
@@ -49,7 +49,7 @@
     color: var(--text-muted);
 }
 
-.r-avatar-icon,
+.r-avatar-icon-wrapper,
 .r-avatar-initials {
     border-radius: var(--avatar-border-radius);
     padding: var(--avatar-padding);
@@ -62,17 +62,17 @@
     width: 36px;
     height: 36px;
     text-align: center;
+}
 
-    span {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        color: #FFFFFF;
-        font-weight: var(--avatar-main-font-veight);
-        font-family: var(--avatar-main-font-family);
-        text-transform: uppercase;
-    }
+.r-avatar-initials-value {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #FFFFFF;
+    font-weight: var(--avatar-main-font-veight);
+    font-family: var(--avatar-main-font-family);
+    text-transform: uppercase;
 }
 
 .r-avatar-initials-gray {
