--- a/packages/recomponents/src/components/r-popper/r-popper.scss
+++ b/packages/recomponents/src/components/r-popper/r-popper.scss
@@ -7,11 +7,12 @@
     width: 100%;
 }
 
-.r-popper .divider {
+.r-popper .r-divider {
+    // todo where is the divider
     margin: var(--space-m) 0;
 }
 
-.r-popper.is-visible {
+.r-popper.r-is-visible {
     visibility: visible;
     opacity: 1;
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
@@ -70,11 +71,11 @@
     color: rgba(255, 255, 255, 0.6);
 }
 
-.r-popper-content .r-popper-item:hover .text-muted, .r-popper-content .r-popper-item:focus .text-muted, .r-popper-content .r-popper-item:active .text-muted {
+.r-popper-content .r-popper-item:hover .r-text-muted, .r-popper-content .r-popper-item:focus .r-text-muted, .r-popper-content .r-popper-item:active .r-text-muted {
     color: rgba(255, 255, 255, 0.6) !important;
 }
 
-.r-popper-content.is-scrollable {
+.r-popper-content.r-is-scrollable {
     max-height: 196px;
     overflow-y: scroll;
 }
@@ -119,7 +120,7 @@
     transform: translate3d(-50%, 0, 0);
 }
 
-.r-popover.is-visible {
+.r-popover.r-is-visible {
     opacity: 1;
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
     filter: alpha(opacity=100);
@@ -139,21 +140,21 @@
 //    z-index: 80;
 //}
 //
-//.r-popover-arrow.is-left {
+//.r-popover-arrow.r-is-left {
 //    transform: rotate(-90deg);
 //    margin-top: -1rem;
 //    top: 50%;
 //    left: -10px;
 //}
 //
-//.r-popover-arrow.is-left-bottom {
+//.r-popover-arrow.r-is-left-bottom {
 //    transform: rotate(-90deg);
 //    margin-top: -3.6rem;
 //    top: 100%;
 //    left: -10px;
 //}
 //
-//.r-popover-arrow.is-right {
+//.r-popover-arrow.r-is-right {
 //    transform: rotate(90deg);
 //    margin-top: -1rem;
 //    top: 50%;
@@ -161,7 +162,7 @@
 //    margin-left: 0;
 //}
 //
-//.r-popover-arrow.is-bottom {
+//.r-popover-arrow.r-is-bottom {
 //    transform: rotate(180deg);
 //    margin-top: -1rem;
 //    margin-top: 0;
@@ -209,8 +210,8 @@
     max-height: var(--popover-max-height);
 }
 
-.r-popover-control.is-scrollable,
-.r-popover-content.is-scrollable {
+.r-popover-control.r-is-scrollable,
+.r-popover-content.r-is-scrollable {
     overflow-y: scroll;
 }
 
@@ -307,7 +308,7 @@
     color: var(--popover-dark-content-color);
 }
 
-.r-popover.r-popover-dark *.text-muted {
+.r-popover.r-popover-dark *.r-text-muted {
     color: var(--popover-dark-content-text-muted) !important;
 }
 
