fix(RModal): adjust CSS

--- a/packages/recomponents/src/components/r-modal/r-modal.scss
+++ b/packages/recomponents/src/components/r-modal/r-modal.scss
@@ -87,7 +87,7 @@
     text-transform: capitalize;
 }
 
-.r-modal-header .btn > .icon {
+.r-modal-header .r-button > .r-icon {
     fill: var(--modal-icon-color);
 }
 
