--- a/packages/recomponents/src/styles/recomm.scss
+++ b/packages/recomponents/src/styles/recomm.scss
@@ -625,7 +625,7 @@ body, .article {
     --modal-padding: var(--space-default);
     --modal-content-background-color: var(--background-color-light);
     --modal-content-scrollable-max-height: 400px;
-    --modal-icon-color: #6B7384;
+    --modal-icon-color: #4a4a4b;
     --modal-loader-background-color: var(--primary-color);
 
     // Pagination
