--- a/packages/recomponents/src/components/r-avatar/r-avatar.scss
+++ b/packages/recomponents/src/components/r-avatar/r-avatar.scss
@@ -25,14 +25,14 @@
     top: 0;
     left: 0;
 
-    figure {
+    .r-avatar-image {
         width: 100%;
         height: 100%;
         margin: 0;
-    }
 
-    .r-avatar-image {
-        width: 100%;
+        .r-img-image {
+            width: 100%;
+        }
     }
 }
 
