chore(component): Cleanup checkbox style

--- a/packages/recomponents/src/components/r-checkbox/r-checkbox.scss
+++ b/packages/recomponents/src/components/r-checkbox/r-checkbox.scss
@@ -2,7 +2,7 @@
     position: relative;
 }
 
-input.r-field-checkbox[type=checkbox] {
+.r-field-checkbox {
     opacity: 0;
     position: absolute;
     left: 0;
