--- a/packages/recomponents/src/styles/helpers.scss
+++ b/packages/recomponents/src/styles/helpers.scss
@@ -39,3 +39,17 @@
 .r-no-scroll {
     overflow: hidden !important;
 }
+
+/**
+ * Position relative
+ */
+.r-position-relative {
+    position: relative !important;
+}
+
+/**
+ * Position absolute
+ */
+.r-position-absolute {
+    position: absolute !important;
+}
