initial commit for r-toast component

--- a/packages/recomponents/src/styles/recomm.scss
+++ b/packages/recomponents/src/styles/recomm.scss
@@ -635,16 +635,37 @@ body, .article {
 
     // Image
     --image-spinner-color: var(--primary-color);
+
+    // Toast
+    --toast-margin-top: 16px;
+    --toast-padding: 16px;
+    --toast-max-width: 300px;
+    --toast-min-width: 100px;
+    --toast-border-radius: var(--border-radius);
+    --toast-font-family: var(--primary-font-stack);
+    --toast-font-weight: var(--font-weight-regular);
+    --toast-text-color: var(--secondary-color);
+    --toast-transition: all 0.4s;
+    --toast-close-padding: 16px 32px 16px 16px;
+    --toast-title-font-size: var(--font-size-h2);
+    --toast-positive-background-color: var(--positive-color-light);
+    --toast-positive-box-shadow: 0 0 0 1px rgba(0, 102, 11, .09), 0 20px 40px -8px rgba(80, 90, 111, .18), 0 3px 6px 0 rgba(80, 90, 111, .07);
+    --toast-negative-background-color: var(--negative-color-light);
+    --toast-negative-box-shadow: 0 0 0 1px rgba(229, 57, 53, .09), 0 20px 40px -8px rgba(80, 90, 111, .18), 0 3px 6px 0 rgba(80, 90, 111, .07);
+    --toast-info-background-color: var(--accent-color-light);
+    --toast-info-box-shadow: 0 0 0 1px rgba(0, 82, 78, .09), 0 20px 40px -8px rgba(80, 90, 111, .18), 0 3px 6px 0 rgba(80, 90, 111, .07);
+    --toast-warning-background-color: var(--warning-color-light);
+    --toast-warning-box-shadow: 0 0 0 1px rgba(96, 78, 0, .09), 0 20px 04px -8px rgba(80, 90, 111, 0.18), 0 3px 6px 0 rgba(80, 90, 111, 0.07);
 }
 
 // Media Breakpoints
 // ------------------------------------------------
 $breakpoints: (
-    'phone': 576px,
-    'tablet': 768px,
-    'small-desktop': 994px,
-    'desktop': 1100px,
-    'large-desktop': 1200px,
+        'phone': 576px,
+        'tablet': 768px,
+        'small-desktop': 994px,
+        'desktop': 1100px,
+        'large-desktop': 1200px,
 ) !default;
 
 // -----------------------------------------------------------------------------
@@ -656,9 +677,9 @@ $breakpoints: (
     font-family: 'Roboto';
     src: url('/static/fonts/Roboto-Bold.eot');
     src: url('/static/fonts/Roboto-Bold.eot?#iefix') format('embedded-opentype'),
-        url('/static/fonts/Roboto-Bold.woff2') format('woff2'),
-        url('/static/fonts/Roboto-Bold.woff') format('woff'),
-        url('/static/fonts/Roboto-Bold.ttf') format('truetype');
+    url('/static/fonts/Roboto-Bold.woff2') format('woff2'),
+    url('/static/fonts/Roboto-Bold.woff') format('woff'),
+    url('/static/fonts/Roboto-Bold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
 }
@@ -667,9 +688,9 @@ $breakpoints: (
     font-family: 'Roboto';
     src: url('/static/fonts/Roboto-BoldItalic.eot');
     src: url('/static/fonts/Roboto-BoldItalic.eot?#iefix') format('embedded-opentype'),
-        url('/static/fonts/Roboto-BoldItalic.woff2') format('woff2'),
-        url('/static/fonts/Roboto-BoldItalic.woff') format('woff'),
-        url('/static/fonts/Roboto-BoldItalic.ttf') format('truetype');
+    url('/static/fonts/Roboto-BoldItalic.woff2') format('woff2'),
+    url('/static/fonts/Roboto-BoldItalic.woff') format('woff'),
+    url('/static/fonts/Roboto-BoldItalic.ttf') format('truetype');
     font-weight: bold;
     font-style: italic;
 }
@@ -678,9 +699,9 @@ $breakpoints: (
     font-family: 'Roboto';
     src: url('/static/fonts/Roboto-Italic.eot');
     src: url('/static/fonts/Roboto-Italic.eot?#iefix') format('embedded-opentype'),
-        url('/static/fonts/Roboto-Italic.woff2') format('woff2'),
-        url('/static/fonts/Roboto-Italic.woff') format('woff'),
-        url('/static/fonts/Roboto-Italic.ttf') format('truetype');
+    url('/static/fonts/Roboto-Italic.woff2') format('woff2'),
+    url('/static/fonts/Roboto-Italic.woff') format('woff'),
+    url('/static/fonts/Roboto-Italic.ttf') format('truetype');
     font-weight: normal;
     font-style: italic;
 }
@@ -689,9 +710,9 @@ $breakpoints: (
     font-family: 'Roboto';
     src: url('/static/fonts/Roboto-Medium.eot');
     src: url('/static/fonts/Roboto-Medium.eot?#iefix') format('embedded-opentype'),
-        url('/static/fonts/Roboto-Medium.woff2') format('woff2'),
-        url('/static/fonts/Roboto-Medium.woff') format('woff'),
-        url('/static/fonts/Roboto-Medium.ttf') format('truetype');
+    url('/static/fonts/Roboto-Medium.woff2') format('woff2'),
+    url('/static/fonts/Roboto-Medium.woff') format('woff'),
+    url('/static/fonts/Roboto-Medium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
 }
@@ -700,9 +721,9 @@ $breakpoints: (
     font-family: 'Roboto';
     src: url('/static/fonts/Roboto-MediumItalic.eot');
     src: url('/static/fonts/Roboto-MediumItalic.eot?#iefix') format('embedded-opentype'),
-        url('/static/fonts/Roboto-MediumItalic.woff2') format('woff2'),
-        url('/static/fonts/Roboto-MediumItalic.woff') format('woff'),
-        url('/static/fonts/Roboto-MediumItalic.ttf') format('truetype');
+    url('/static/fonts/Roboto-MediumItalic.woff2') format('woff2'),
+    url('/static/fonts/Roboto-MediumItalic.woff') format('woff'),
+    url('/static/fonts/Roboto-MediumItalic.ttf') format('truetype');
     font-weight: 500;
     font-style: italic;
 }
@@ -711,9 +732,9 @@ $breakpoints: (
     font-family: 'Roboto';
     src: url('/static/fonts/Roboto-Regular.eot');
     src: url('/static/fonts/Roboto-Regular.eot?#iefix') format('embedded-opentype'),
-        url('/static/fonts/Roboto-Regular.woff2') format('woff2'),
-        url('/static/fonts/Roboto-Regular.woff') format('woff'),
-        url('/static/fonts/Roboto-Regular.ttf') format('truetype');
+    url('/static/fonts/Roboto-Regular.woff2') format('woff2'),
+    url('/static/fonts/Roboto-Regular.woff') format('woff'),
+    url('/static/fonts/Roboto-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
@@ -723,9 +744,9 @@ $breakpoints: (
     font-family: 'Montserrat';
     src: url('/static/fonts/Montserrat-Light.eot');
     src: url('/static/fonts/Montserrat-Light.eot?#iefix') format('embedded-opentype'),
-        url('/static/fonts/Montserrat-Light.woff2') format('woff2'),
-        url('/static/fonts/Montserrat-Light.woff') format('woff'),
-        url('/static/fonts/Montserrat-Light.ttf') format('truetype');
+    url('/static/fonts/Montserrat-Light.woff2') format('woff2'),
+    url('/static/fonts/Montserrat-Light.woff') format('woff'),
+    url('/static/fonts/Montserrat-Light.ttf') format('truetype');
     font-weight: 300;
     font-style: normal;
 }
@@ -734,9 +755,9 @@ $breakpoints: (
     font-family: 'Montserrat';
     src: url('/static/fonts/Montserrat-Regular.eot');
     src: url('/static/fonts/Montserrat-Regular.eot?#iefix') format('embedded-opentype'),
-        url('/static/fonts/Montserrat-Regular.woff2') format('woff2'),
-        url('/static/fonts/Montserrat-Regular.woff') format('woff'),
-        url('/static/fonts/Montserrat-Regular.ttf') format('truetype');
+    url('/static/fonts/Montserrat-Regular.woff2') format('woff2'),
+    url('/static/fonts/Montserrat-Regular.woff') format('woff'),
+    url('/static/fonts/Montserrat-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
@@ -745,9 +766,9 @@ $breakpoints: (
     font-family: 'Montserrat';
     src: url('/static/fonts/Montserrat-Medium.eot');
     src: url('/static/fonts/Montserrat-Medium.eot?#iefix') format('embedded-opentype'),
-        url('/static/fonts/Montserrat-Medium.woff2') format('woff2'),
-        url('/static/fonts/Montserrat-Medium.woff') format('woff'),
-        url('/static/fonts/Montserrat-Medium.ttf') format('truetype');
+    url('/static/fonts/Montserrat-Medium.woff2') format('woff2'),
+    url('/static/fonts/Montserrat-Medium.woff') format('woff'),
+    url('/static/fonts/Montserrat-Medium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
 }
@@ -756,9 +777,9 @@ $breakpoints: (
     font-family: 'Montserrat';
     src: url('/static/fonts/Montserrat-SemiBold.eot');
     src: url('/static/fonts/Montserrat-SemiBold.eot?#iefix') format('embedded-opentype'),
-        url('/static/fonts/Montserrat-SemiBold.woff2') format('woff2'),
-        url('/static/fonts/Montserrat-SemiBold.woff') format('woff'),
-        url('/static/fonts/Montserrat-SemiBold.ttf') format('truetype');
+    url('/static/fonts/Montserrat-SemiBold.woff2') format('woff2'),
+    url('/static/fonts/Montserrat-SemiBold.woff') format('woff'),
+    url('/static/fonts/Montserrat-SemiBold.ttf') format('truetype');
     font-weight: 600;
     font-style: normal;
 }
@@ -767,9 +788,9 @@ $breakpoints: (
     font-family: 'Montserrat';
     src: url('/static/fonts/Montserrat-Bold.eot');
     src: url('/static/fonts/Montserrat-Bold.eot?#iefix') format('embedded-opentype'),
-        url('/static/fonts/Montserrat-Bold.woff2') format('woff2'),
-        url('/static/fonts/Montserrat-Bold.woff') format('woff'),
-        url('/static/fonts/Montserrat-Bold.ttf') format('truetype');
+    url('/static/fonts/Montserrat-Bold.woff2') format('woff2'),
+    url('/static/fonts/Montserrat-Bold.woff') format('woff'),
+    url('/static/fonts/Montserrat-Bold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
 }
@@ -779,9 +800,9 @@ $breakpoints: (
     font-family: 'Roboto Mono';
     src: url('/static/fonts/RobotoMono-Bold.eot');
     src: url('/static/fonts/RobotoMono-Bold.eot?#iefix') format('embedded-opentype'),
-        url('/static/fonts/RobotoMono-Bold.woff2') format('woff2'),
-        url('/static/fonts/RobotoMono-Bold.woff') format('woff'),
-        url('/static/fonts/RobotoMono-Bold.ttf') format('truetype');
+    url('/static/fonts/RobotoMono-Bold.woff2') format('woff2'),
+    url('/static/fonts/RobotoMono-Bold.woff') format('woff'),
+    url('/static/fonts/RobotoMono-Bold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
 }
@@ -790,9 +811,9 @@ $breakpoints: (
     font-family: 'Roboto Mono';
     src: url('/static/fonts/RobotoMono-Medium.eot');
     src: url('/static/fonts/RobotoMono-Medium.eot?#iefix') format('embedded-opentype'),
-        url('/static/fonts/RobotoMono-Medium.woff2') format('woff2'),
-        url('/static/fonts/RobotoMono-Medium.woff') format('woff'),
-        url('/static/fonts/RobotoMono-Medium.ttf') format('truetype');
+    url('/static/fonts/RobotoMono-Medium.woff2') format('woff2'),
+    url('/static/fonts/RobotoMono-Medium.woff') format('woff'),
+    url('/static/fonts/RobotoMono-Medium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
 }
@@ -801,9 +822,9 @@ $breakpoints: (
     font-family: 'Roboto Mono';
     src: url('/static/fonts/RobotoMono-Regular.eot');
     src: url('/static/fonts/RobotoMono-Regular.eot?#iefix') format('embedded-opentype'),
-        url('/static/fonts/RobotoMono-Regular.woff2') format('woff2'),
-        url('/static/fonts/RobotoMono-Regular.woff') format('woff'),
-        url('/static/fonts/RobotoMono-Regular.ttf') format('truetype');
+    url('/static/fonts/RobotoMono-Regular.woff2') format('woff2'),
+    url('/static/fonts/RobotoMono-Regular.woff') format('woff'),
+    url('/static/fonts/RobotoMono-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
@@ -944,10 +965,12 @@ sub {
 
 address {
     font-style: normal;
+
     p {
         margin: 0;
     }
+
     button {
-        text-transform: inherit!important;
+        text-transform: inherit !important;
     }
 }
