--- a/packages/recomponents/src/components/r-modal/r-modal.scss
+++ b/packages/recomponents/src/components/r-modal/r-modal.scss
@@ -104,7 +104,7 @@
 * Transitions
 */
 .r-modal-enter-active, .r-modal-leave-active {
-    transition: all .2s;
+    transition: all;
 }
 
 .r-modal-enter, .r-modal-leave-to {
@@ -112,7 +112,7 @@
 }
 
 .r-modal-enter-active .r-modal-control, .r-modal-leave-active .r-modal-control {
-    transition: all .2s;
+    transition: all;
 }
 
 .r-modal-enter .r-modal-control, .r-modal-leave-to .r-modal-control {
