fix(RPopper): fix the css bug

--- a/packages/recomponents/src/components/r-popper/r-popper.scss
+++ b/packages/recomponents/src/components/r-popper/r-popper.scss
@@ -1,3 +1,8 @@
+.r-popper-content-wrapper > *:only-child {
+    visibility: visible !important;
+    opacity: 1 !important;
+}
+
 .r-popper {
     display: inline-block;
     position: relative;
