fix(component): Cleanup RCheckbox styles

--- a/packages/recomponents/src/components/r-input/r-input.scss
+++ b/packages/recomponents/src/components/r-input/r-input.scss
@@ -1,7 +1,3 @@
-// -----------------------------------------------------------------------------
-// This file contains all styles related to the icon component.
-// -----------------------------------------------------------------------------
-
 .r-field,
 .r-field-control {
     position: relative;
@@ -132,7 +128,7 @@ textarea.r-field-input {
     padding-left: 0;
 }
 
-.r-field-addon .r-field-label-toggle {
+.r-field-addon {
     margin-bottom: 0;
 }
 
