--- a/packages/recomponents/src/components/r-popper/r-popper.scss
+++ b/packages/recomponents/src/components/r-popper/r-popper.scss
@@ -165,6 +165,14 @@
 
 .r-popover-content.r-popover-menu {
     padding: var(--popover-content-menu-padding);
+    overflow: scroll;
+    max-height: inherit;
+    background: var(--popover-background);
+    min-width: var(--popover-min-width);
+    background: var(--popover-background);
+    box-shadow: var(--popover-box-shadow);
+    border-radius: var(--popover-border-radius);
+    transition: var(--popover-transition);
 }
 
 .r-popover-action-menu-item,
