Keep the same style as in the recomm

--- a/packages/recomponents/src/styles/theme.scss
+++ b/packages/recomponents/src/styles/theme.scss
@@ -430,7 +430,7 @@ body, .article {
     --tab-link-error-color: var(--negative-color);
     --tab-link-error-border-bottom-color: var(--negative-color);
     --tab-link-first-margin-left: var(--space-m);
-    --tab-content-padding: 0 20px 20px 20px;
+    --tab-content-padding: 20px;
     --tab-content-tile-padding: var(--space-m) 0;
 
     // Toggle
