--- a/packages/recomponents/src/components/r-button-group/r-button-group.scss
+++ b/packages/recomponents/src/components/r-button-group/r-button-group.scss
@@ -38,3 +38,7 @@
     color: #FFFFFF;
     box-shadow: 0 1px 2px 0 rgba(161, 178, 193, 0.8);
 }
+
+.r-button-group.r-button-group-single .r-button {
+    border-radius: var(--button-border-radius);
+}
