fix(component): Fix RButtonGroup items in Safari

--- a/packages/recomponents/src/components/r-button-group/r-button-group.scss
+++ b/packages/recomponents/src/components/r-button-group/r-button-group.scss
@@ -11,6 +11,8 @@
 .r-button-group .r-button {
     margin-left: -1px;
     margin-left: -0.1rem;
+    margin-right: -1px;
+    margin-right: -0.1rem;
 }
 
 .r-button-group .r-button:not(:first-child):not(:last-child),
